# ubrn-bug-reproducer

./: .gitignore  UbrnBugReproducer.podspec  package.json
ReproducerLib/: README.md
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/: AndroidManifest.xml
android/src/main/java/com/ubrnbugreproducer/: UbrnBugReproducerModule.kt  UbrnBugReproducerPackage.kt
cpp/: ubrn-bug-reproducer.cpp  ubrn-bug-reproducer.h
example/ios/UbrnBugReproducerExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: UbrnBugReproducer.h  UbrnBugReproducer.mm
src/: NativeUbrnBugReproducer.ts  index.tsx
